--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "version": "1.0",
     "description": "Build an Extension!",
     "permissions": ["activeTab","declarativeContent","storage"],
-    "options:page": "options.html",
+    "options_page": "options.html",
     "background": {
       "scripts": ["background.js"],
       "persistent": false
